<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map_location">Locate Me</string>
    <string name="action_share">Share</string>
    <string name="week_forecast_endpoint"><![CDATA[http://api.openweathermap.org/data/2.5/forecast/daily?q=60563&mode=json&units=metric&cnt=7]]></string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_general_location_key" translatable="false">Location</string>
    <string name="pref_general_location_title">Location</string>
    <string name="pref_general_location_default" translatable="false">60563</string>
    <string name="pref_general_temp_units_key" translatable="false">Temperature Units</string>
    <string name="pref_general_temp_units_title">Units</string>
    <string name="pref_general_temp_units_metric" translatable="false">Metric</string>
    <string name="pref_general_notifications_key" translatable="false">NotificationPreference</string>
    <string name="pref_general_notifications_title">Show Notifications</string>
    <string name="pref_general_notifications_true">Enabled</string>
    <string name="pref_general_notifications_false">Not Enabled</string>
    <string name="pref_general_notifications_default" translatable="false">true</string>

    !-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temparature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

    <!-- Windspeed format in mph [CHAR LIMIT=NONE] -->
    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">
        %1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>

    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.krishnadamarla.sunshine</string>

    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="notification_title">Weather Today</string>

</resources>
