<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<EditTextPreference
    android:key="@string/pref_general_location_key"
    android:title="@string/pref_general_location_title"
    android:defaultValue="@string/pref_general_location_default"
    android:inputType="text"
    android:singleLine="true"/>
<ListPreference android:title="@string/pref_general_temp_units_title"
    android:key="@string/pref_general_temp_units_key"
    android:defaultValue="@string/pref_general_temp_units_metric"
    android:entries="@array/temp_units_array_entries"
    android:entryValues="@array/temp_units_array_values">
</ListPreference>
 <CheckBoxPreference android:title="@string/pref_general_notifications_title"
     android:key="@string/pref_general_notifications_key"
     android:summaryOff="@string/pref_general_notifications_false"
     android:summaryOn="@string/pref_general_notifications_true"
     android:defaultValue="@string/pref_general_notifications_default">
 </CheckBoxPreference>

</PreferenceScreen>